name:                servant-client-reflex-dom
version:             0.5
synopsis: automatical derivation of querying functions for servant webservices
description:         Access Servant API's by reflex-dom XHR
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari, Sönke Hahn, Julian K. Arni, Greg Hale
maintainer:          imalsogreg@gmail.com
copyright:           2015 Greg Hale
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.10
homepage:            http://github.com/imalsogreg/servant-client-reflex-dom
Bug-reports:         http://github.com/imalsogreg/servant-client-reflex-dom/issues
source-repository head
  type: git
  location: http://github.com/imalsogreg/servant-client-reflex-dom

library
  exposed-modules:
    Servant.Client
    Servant.Common.BaseUrl
    Servant.Common.Req
    Servant.Client.Reflex.Dom.Xhr.GHCJS
    Servant.Client.Reflex.Dom.Xhr.GHC
  build-depends:
      base >=4.7 && <5
    , aeson
    , attoparsec
    , bytestring
    , exceptions
    , ghcjs-dom >= 0.1.1.3 && < 0.2
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , network-uri >= 2.6
    , reflex-dom >= 0.2 && < 0.3
    , safe
    , servant == 0.5.*
    , string-conversions
    , text
    , transformers
    , transformers-compat
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-missing-signatures
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Servant.ClientSpec
    , Servant.Common.BaseUrlSpec
  build-depends:
      base == 4.*
    , transformers
    , transformers-compat
    , aeson
    , bytestring
    , deepseq
    , hspec == 2.*
    , http-client
    , http-media
    , http-types
    , HUnit
    , network >= 2.6
    , QuickCheck >= 2.7
    , servant == 0.5.*
    , servant-client
    , servant-server == 0.5.*
    , text
    , wai
    , warp
